# nb-strip-paths

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  setup.cfg
nb_strip_paths/: __init__.py  __main__.py  cmdline.py
tests/: .gitignore  generate_reference_notebooks.sh  print_paths.ipynb  run_tests.sh
tests/notebooks/: print_paths.ipynb
