[metadata]
name = nb_strip_paths
version = attr: nb_strip_paths.__version__
description = Replace user paths in Jupyter Notebook cell outputs with relative paths.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bdice/nb-strip-paths
author = Bradley Dice
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Jupyter
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Quality Assurance
keywords = jupyter, notebook, format, lint
project_urls =
    Source = https://github.com/bdice/nb-strip-paths

[options]
packages = find:
py_modules = nb_strip_paths
python_requires = >=3.6.0

[options.entry_points]
console_scripts =
    nb-strip-paths = nb_strip_paths.__main__:main

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
python-tag = py3

[flake8]
max-line-length = 120
exclude = venv,.*
